--- a/frontend/home.html
+++ b/frontend/home.html
@@ -1,84 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CareerNest - Home</title>
-    <style>
-      body {
-        font-family: Arial;
-        margin: 0;
-        padding: 0;
-      }
-      nav {
-        background-color: #333;
-        padding: 15px 30px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-      nav h1 {
-        color: white;
-        margin: 0;
-        font-size: 24px;
-      }
-      nav .nav-buttons {
-        display: flex;
-        gap: 10px;
-      }
-      nav button {
-        padding: 8px 16px;
-        cursor: pointer;
-        border: none;
-        border-radius: 4px;
-        font-size: 14px;
-      }
-      .login-btn {
-        background-color: white;
-        color: #333;
-      }
-      .signup-btn {
-        background-color: #4CAF50;
-        color: white;
-      }
-      .hero {
-        text-align: center;
-        padding: 100px 50px;
-        background-color: #f4f4f4;
-      }
-      .hero h2 {
-        font-size: 36px;
-        margin-bottom: 20px;
-        color: #333;
-      }
-      .hero p {
-        font-size: 18px;
-        color: #666;
-        margin-bottom: 30px;
-      }
-      .hero button {
-        padding: 12px 30px;
-        cursor: pointer;
-        border: none;
-        border-radius: 4px;
-        font-size: 16px;
-        margin: 0 10px;
-      }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CareerNest - Home</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-    <nav>
-      <h1>CareerNest</h1>
-      <div class="nav-buttons">
-        <button class="login-btn" onclick="window.location.href='login.html'">Login</button>
-        <button class="signup-btn" onclick="window.location.href='signup.html'">Sign Up</button>
-      </div>
-    </nav>
-
-    <div class="hero">
-      <h2>Welcome to CareerNest</h2>
-      <p>Find your dream job or the perfect candidate</p>
-      
+  <nav>
+    <h1 onclick="window.location.href='home.html'">CareerNest</h1>
+    <div class="nav-buttons">
+      <button class="btn-browse" onclick="window.location.href='jobs.html'">Browse Jobs</button>
+      <span id="userInfo" class="user-info"></span>
+      <div id="authButtons"></div>
     </div>
+  </nav>
+
+  <div class="hero">
+    <h2>Welcome to CareerNest</h2>
+    <p>Find your dream job or the perfect candidate</p>
+    <button class="btn-browse" onclick="window.location.href='jobs.html'">Browse Jobs</button>
+  </div>
+
+  <script src="js/home.js"></script>
 </body>
 </html>
