--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -2,46 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Signup</title>
-  <style>
-    body { font-family: Arial; text-align: center; padding: 50px; }
-    input, select { margin: 5px; padding: 8px; width: 200px; }
-    button { padding: 8px 16px; cursor: pointer; }
-  </style>
+  <title>Signup - CareerNest</title>
+  <link rel="stylesheet" href="css/auth.css">
 </head>
 <body>
-  <h2>Signup</h2>
-  <input id="firstName" placeholder="First Name"><br>
-  <input id="lastName" placeholder="Last Name"><br>
-  <input id="email" type="email" placeholder="Email"><br>
-  <input id="phone" placeholder="Phone"><br>
-  <input id="password" type="password" placeholder="Password"><br>
-  <select id="userType">
-    <option value="jobseeker">Job Seeker</option>
-    <option value="employer">Employer</option>
-  </select><br>
-  <button onclick="signup()">Signup</button>
+  <div class="auth-container">
+    <h2>Signup</h2>
+    <input id="firstName" placeholder="First Name" required><br>
+    <input id="lastName" placeholder="Last Name" required><br>
+    <input id="email" type="email" placeholder="Email" required><br>
+    <input id="phone" placeholder="Phone" required><br>
+    <input id="password" type="password" placeholder="Password" required><br>
+    <select id="userType">
+      <option value="jobseeker">Job Seeker</option>
+      <option value="employer">Employer</option>
+    </select><br>
+    <button onclick="signup()">Signup</button>
 
-  <p id="message"></p>
+    <p id="message"></p>
 
-  <script>
-    async function signup() {
-      const firstName = document.getElementById("firstName").value;
-      const lastName = document.getElementById("lastName").value;
-      const email = document.getElementById("email").value;
-      const phone = document.getElementById("phone").value;
-      const password = document.getElementById("password").value;
-      const userType = document.getElementById("userType").value;
+    <div class="links">
+      <a href="login.html">Already have an account? Login</a><br>
+      <a href="home.html">Back to Home</a>
+    </div>
+  </div>
 
-      const res = await fetch("http://localhost:3000/api/auth/signup", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ firstName, lastName, email, phone, password, userType }),
-      });
-
-      const data = await res.json();
-      document.getElementById("message").textContent = data.message;
-    }
-  </script>
+  <script src="js/signup.js"></script>
 </body>
 </html>
